--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
@@ -32,8 +32,8 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 	<title>
 		<band height="146">
 			<textField>
-				<reportElement x="454" y="99" width="74" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
-				<textElement textAlignment="Right">
+				<reportElement x="419" y="99" width="66" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
+				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
@@ -46,7 +46,7 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="398" y="79" width="114" height="20" uuid="6d432196-300e-4646-9cbb-b80875b4eefe"/>
+				<reportElement x="419" y="79" width="93" height="20" uuid="6d432196-300e-4646-9cbb-b80875b4eefe"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -74,7 +74,7 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="528" y="99" width="26" height="20" uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c"/>
+				<reportElement x="485" y="99" width="27" height="20" uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -95,7 +95,7 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="438" y="119" width="100" height="20" uuid="a8241048-dabe-49f9-bd10-c00527057601"/>
+				<reportElement x="465" y="119" width="83" height="20" uuid="a8241048-dabe-49f9-bd10-c00527057601"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -120,14 +120,14 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="399" y="119" width="39" height="20" uuid="93ca6744-3f58-491e-8fe7-0b70222b5983"/>
+				<reportElement x="419" y="119" width="46" height="20" uuid="93ca6744-3f58-491e-8fe7-0b70222b5983"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="327" y="119" width="100" height="20" uuid="7393f81c-d206-4339-a79f-c6a4ec520729"/>
+				<reportElement x="327" y="119" width="82" height="20" uuid="7393f81c-d206-4339-a79f-c6a4ec520729"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -283,14 +283,38 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="63">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="4" width="555" height="13" backcolor="#E6E6E6" uuid="8278bb72-e371-4833-9b28-f319cc275709"/>
+				<reportElement mode="Opaque" x="0" y="19" width="236" height="13" backcolor="#FFFFFF" uuid="8278bb72-e371-4833-9b28-f319cc275709"/>
 				<textElement>
-					<font fontName="Times New Roman" isUnderline="true"/>
+					<font fontName="Times New Roman" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="0" y="11" width="548" height="1" uuid="0c1acc11-edbb-4dac-bef1-3bdcb09000fc"/>
+			</line>
+			<textField>
+				<reportElement x="428" y="12" width="74" height="20" uuid="aff09735-7ef7-49d3-94b8-0a9fe2c00344"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="502" y="12" width="26" height="20" uuid="92d48c85-e72e-4c2a-a803-694c6accf75c"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="204" y="41" width="189" height="20" uuid="b2d2051e-b005-4053-a938-564a2c1d9328"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
