--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -437,6 +437,25 @@
                         <span class="popuptext" id="poppup27">Ingrese el numero de cuenta bancaria del Empleado solo se admitiran 30 caracteres .!</span>
                     </div>
                 </div>
+ <div class="form-group">
+                <label class="col-sm-3 control-label">Estado del Empleado(*):</label>
+                <div class="col-sm-2">
+                    <select class="form-control" name="estadoempleado" th:field="*{estadoempleado}">
+                            <!--th:field="*{tipocuenta}">-->
+                        <option value="1">Activo</option>
+                        <option value="3">Pensionado</option>
+                        <option value="2">Indemnizado</option>
+                        <option value="4">Despedido</option>
+                        <option value="0">De Baja</option>
+                    </select>
+                </div>
+                <div class="popup "><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup263')" onmouseout ="javascript:ocultarAyuda('poppup263')">a</a></b>
+                        
+                        <span class="popuptext" id="poppup263">Seleccione el estado del Empleado desplegando la lista.!</span>
+                    </div>
+             
+            </div>
  <br><br>
             </div>
            
