--- a/src/main/resources/templates/fragments/otherreports/capacitadoresreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/capacitadoresreporte.html
@@ -20,9 +20,9 @@
                 <form class="form-horizontal" id="formcapacitador">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo Capacitador:</label>
+                        <!--<label class="col-sm-3 control-label" >Codigo Capacitador:</label>-->
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <input type="hidden" class="form-control" id="codigo" name="codigo" value="1"/>
                         </div>
                     </div>
 <!--                     <div class="form-group">    
