--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
@@ -60,8 +60,8 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="455" y="80" width="74" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
-				<textElement textAlignment="Right">
+				<reportElement x="418" y="80" width="57" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
+				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
@@ -74,21 +74,21 @@
 				<text><![CDATA[REPORTE DE NUEVAS CONTRATACIONES]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="529" y="80" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
+				<reportElement x="477" y="80" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="409" y="60" width="114" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
+				<reportElement x="418" y="60" width="105" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="416" y="98" width="39" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
+				<reportElement x="418" y="98" width="37" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -102,7 +102,7 @@
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="316" y="100" width="100" height="20" uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8"/>
+				<reportElement x="316" y="100" width="92" height="20" uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -231,7 +231,7 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="22">
+		<band height="21">
 			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="0" width="54" height="20" uuid="1e6acfee-6c20-4362-bd70-58ef802e549b"/>
 				<textElement>
@@ -287,14 +287,38 @@
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="59">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="4" width="555" height="13" backcolor="#E6E6E6" uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3"/>
+				<reportElement mode="Opaque" x="0" y="12" width="277" height="13" backcolor="#FFFFFF" uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3"/>
 				<textElement>
-					<font fontName="Times New Roman" isUnderline="true"/>
+					<font fontName="Times New Roman" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="1" y="8" width="548" height="1" uuid="ed8e9bcf-b26f-42d1-a54e-d91b5ac6427e"/>
+			</line>
+			<textField>
+				<reportElement x="429" y="9" width="74" height="20" uuid="d55661fa-f4cb-42ee-a4e5-411d7d279ea2"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="503" y="9" width="26" height="20" uuid="1f2a4478-a8d5-4319-a004-c25b9acc56ba"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="195" y="39" width="189" height="20" uuid="740bb6ee-36c8-4cd3-be40-22914be15a87"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
