--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="23e6b007-0068-4e8d-99ff-9f90427771ad">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="11"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAFIN" class="java.lang.String"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="USUARIO" class="java.lang.String"/>
@@ -45,14 +45,14 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 				<text><![CDATA[REPORTE DE COSTOS DE CAPACITACION]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="461" y="88" width="74" height="20" uuid="8ba403ce-a35c-4d69-a99f-53bef029265c"/>
-				<textElement textAlignment="Right">
+				<reportElement x="426" y="88" width="65" height="20" uuid="8ba403ce-a35c-4d69-a99f-53bef029265c"/>
+				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="535" y="88" width="26" height="20" uuid="ccce83d5-fb3d-41f8-b7cf-d7a6f6fdca54"/>
+				<reportElement x="492" y="88" width="26" height="20" uuid="ccce83d5-fb3d-41f8-b7cf-d7a6f6fdca54"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -66,7 +66,7 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="404" y="68" width="114" height="20" uuid="cfc5a73e-6906-4dbd-bc16-465accdd2249"/>
+				<reportElement x="426" y="68" width="92" height="20" uuid="cfc5a73e-6906-4dbd-bc16-465accdd2249"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -221,14 +221,38 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="54">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="4" width="555" height="13" backcolor="#E6E6E6" uuid="81777815-467e-41ee-92d9-16f96509fa41"/>
+				<reportElement mode="Opaque" x="0" y="4" width="269" height="13" backcolor="#FFFFFF" uuid="81777815-467e-41ee-92d9-16f96509fa41"/>
 				<textElement>
-					<font fontName="Times New Roman" isUnderline="true"/>
+					<font fontName="Times New Roman" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="7" y="3" width="548" height="1" uuid="d37640ca-23c0-4548-8588-9d9bf509c44d"/>
+			</line>
+			<textField>
+				<reportElement x="435" y="4" width="74" height="20" uuid="b131009a-0429-4ef9-b8af-a07ebd3da1dd"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="509" y="4" width="26" height="20" uuid="183d8a7c-652c-496c-8ca4-5a57bd6423a2"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="189" y="34" width="189" height="20" uuid="11ae3b08-c42a-4496-a0db-afc4d96bf027"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
