--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_nivelesescolares.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_nivelesescolares.jrxml
@@ -66,14 +66,14 @@ n.codigonivelnivelescolaridad=en.codigonivelnivelescolaridad]]>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="703" y="92" width="74" height="20" uuid="dc4d375f-cdaa-4a68-beca-68321ca3f231"/>
-				<textElement textAlignment="Right">
+				<reportElement x="656" y="92" width="60" height="20" uuid="dc4d375f-cdaa-4a68-beca-68321ca3f231"/>
+				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="777" y="92" width="26" height="20" uuid="be740dfb-e360-424e-aa85-2f2c53509bb3"/>
+				<reportElement x="716" y="93" width="26" height="20" uuid="be740dfb-e360-424e-aa85-2f2c53509bb3"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -87,14 +87,14 @@ n.codigonivelnivelescolaridad=en.codigonivelnivelescolaridad]]>
 				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="650" y="72" width="114" height="20" uuid="2beca2da-7bb2-4989-a813-4bd7e15578db"/>
+				<reportElement x="656" y="72" width="108" height="20" uuid="2beca2da-7bb2-4989-a813-4bd7e15578db"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="689" y="112" width="100" height="20" uuid="14c98792-a82d-4217-8f42-ae5d6ca0a399"/>
+				<reportElement x="702" y="113" width="100" height="20" uuid="14c98792-a82d-4217-8f42-ae5d6ca0a399"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -137,7 +137,7 @@ n.codigonivelnivelescolaridad=en.codigonivelnivelescolaridad]]>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="650" y="112" width="39" height="20" uuid="417129af-5b08-478e-be34-347d79886762"/>
+				<reportElement x="656" y="113" width="46" height="20" uuid="417129af-5b08-478e-be34-347d79886762"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -310,14 +310,38 @@ n.codigonivelnivelescolaridad=en.codigonivelnivelescolaridad]]>
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="69">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="4" width="804" height="13" backcolor="#E6E6E6" uuid="25ee026d-9e81-4680-b8c2-8b42797f2b79"/>
+				<reportElement mode="Opaque" x="1" y="14" width="219" height="13" backcolor="#FFFFFF" uuid="25ee026d-9e81-4680-b8c2-8b42797f2b79"/>
 				<textElement>
-					<font fontName="Times New Roman" isUnderline="true"/>
+					<font fontName="Times New Roman" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="0" y="8" width="802" height="1" uuid="5d4f0716-3e01-4437-ae3e-18dcdbabb1cc"/>
+			</line>
+			<textField>
+				<reportElement x="690" y="14" width="74" height="20" uuid="be97135a-9d45-4e7f-bb2a-d3de80be34b4"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="764" y="14" width="26" height="20" uuid="cd954c47-6d62-43aa-b69a-05fcb101c2e7"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="279" y="39" width="189" height="20" uuid="948718d7-333e-40d5-b3ce-2ba73b509c3e"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
